src/ui/app/static/css/overrides.css
/* ... */
.btn-outline-secondary.disabled,
.btn-outline-secondary:disabled {
  color: var(--bs-secondary) !important;
  border-color: var(--bs-secondary) !important;
}

.btn-outline-secondary .badge {
  background: var(--bs-secondary);
  border-color: var(--bs-secondary);
}

.btn-outline-secondary:hover .badge,
.btn-outline-secondary:focus:hover .badge,
.btn-outline-secondary:active .badge,
.btn-outline-secondary.active .badge,
.show > .btn-outline-secondary.dropdown-toggle .badge {
  color: var(--bs-secondary);
}

.alert-secondary {
  color: var(--bs-secondary);
}
.alert-secondary .btn-close {
  background-image: url("data:image/svg+xml,%3Csvg width='150px' height='151px' viewBox='0 0 150 151' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpolygon id='path-1' points='131.251657 0 74.9933705 56.25 18.7483426 0 0 18.75 56.2450278 75 0 131.25 18.7483426 150 74.9933705 93.75 131.251657 150 150 131.25 93.7549722 75 150 18.75'%3E%3C/polygon%3E%3C/defs%3E%3Cg id='🎨-%5BSetup%5D:-Colors-&amp;-Shadows' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Artboard' transform='translate(-225.000000, -250.000000)'%3E%3Cg id='Icon-Color' transform='translate(225.000000, 250.500000)'%3E%3Cuse fill='%2335728e' xlink:href='%23path-1'%3E%3C/use%3E%3Cuse fill-opacity='0.5' fill='%2335728e' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}
.alert-secondary .alert-link {
  color: var(--bs-secondary);
}

.alert-secondary hr {
  color: var(--bs-secondary) !important;
}
.alert-secondary .alert-icon {
  background-color: var(--bs-secondary);
}

.list-group-item-secondary {
  border-color: var(--bs-secondary);
  color: var(--bs-secondary) !important;
}

a.list-group-item-secondary,
button.list-group-item-secondary {
  color: var(--bs-secondary);
}
a.list-group-item-secondary:hover,
a.list-group-item-secondary:focus,
button.list-group-item-secondary:hover,
button.list-group-item-secondary:focus {
  border-color: var(--bs-secondary);
  color: var(--bs-secondary);
}
a.list-group-item-secondary.active,
button.list-group-item-secondary.active {
  border-color: var(--bs-secondary) !important;
  background-color: var(--bs-secondary) !important;
}

.bg-secondary.toast .toast-header .btn-close,
.bg-secondary.bs-toast .toast-header .btn-close {
  background-color: var(--bs-secondary) !important;
}

.bg-label-secondary {
  color: var(--bs-secondary) !important;
}

@keyframes colorPhase {
  0% {
    box-shadow: 0 1px 20px 1px var(--bs-primary); /* Primary shadow */
  }
  50% {
    box-shadow: 0 1px 20px 1px var(--bs-bw-green); /* Secondary shadow */
  }
  100% {
    box-shadow: 0 1px 20px 1px var(--bs-primary); /* Primary shadow */
  }
}

.btn-close {
  background: transparent var(--bs-btn-close-bg) center/1em auto no-repeat;
}

.text-muted {
  color: #8b9197 !important;
}

.buy-now .btn-buy-now {
  position: unset;
  box-shadow: 0 1px 20px 1px var(--bs-primary); /* Initial shadow */
  background-color: var(--bs-bw-green); /* Initial background color */
  color: #fff;
  animation: colorPhase 3s infinite; /* Apply the color phasing animation */
  transition:
    background-color 0.3s ease-in-out,
    box-shadow 0.3s ease-in-out; /* Smooth transitions */
}

.buy-now .btn-buy-now:hover {
  background-color: var(
    --bs-bw-green
  ) !important; /* Keep the primary color on hover */
}

.btn-pro-now {
  background-color: var(--bs-bw-green); /* Initial background color */
  color: #fff;
}

.btn-pro-now:hover {
  background-color: var(
    --bs-bw-green
  ) !important; /* Keep the primary color on hover */
}

.avatar.avatar-offline:after {
  background-color: var(--bs-secondary);
}

.navbar.bg-secondary .search-input-wrapper .search-input,
.navbar.bg-secondary .search-input-wrapper .search-toggler {
  background-color: var(--bs-secondary) !important;
}

.toast-container {
  z-index: 1100;
}

/*
* Main overrides
******************************************************************************/

:root {
  --dt-row-selected: 230, 234, 237;
  --font-don-jose: "Don Jose", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  --font-courier-prime: "Courier Prime", -apple-system, BlinkMacSystemFont,
    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
}

.badge-dot {
  padding: 0.35rem;
  font-size: 0.6rem;
  animation: pulsate 1.7s infinite;
}

.badge-dot-text {
  font-size: 0.6rem;
  animation: pulsate 1.7s infinite;
}

@keyframes pulsate {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  50% {
    transform: scale(1.5);
    opacity: 0.5;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.w-30 {
  width: 30% !important;
}

.badge-center-sm {
  padding: 2.5px;
  line-height: 1.2;
  height: 1.25rem;
  width: 1.25rem;
  font-size: 0.7rem;
}

.badge-center-sm i {
  font-size: 0.8rem;
}

.bg-bw-green {
  background-color: var(--bs-bw-green);
}

/* .pro-icon {
  position: relative;
  width: 18px;
  height: 15.5px;
  overflow: hidden;
}

.pro-icon::before,
.pro-icon::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  transition: opacity 1.5s ease-in-out;
}

.pro-icon::before {
  background-image: url("../img/diamond.svg");
  opacity: 1;
  animation: fadeOut 1.5s infinite alternate;
}

.pro-icon::after {
  background-image: url("../img/diamond-blue.svg");
  opacity: 0;
  animation: fadeIn 1.5s infinite alternate;
} */

.btn-responsive {
  padding: 6px 14px;
  font-size: 90%;
  line-height: 1.2;
}

@media (max-width: 768px) {
  .btn-responsive {
    padding: 2px 6px;
    font-size: 70%;
    line-height: 1;
  }

  /* .pro-icon {
    width: 9px;
    height: 7.75px;
  } */
}
/* ... */

